--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-group {
+  margin-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: medium;
+  color: black;
+}
+
+input[type="text"],
+input[type="number"] {
+  width: 60%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
   color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background-color: #45a049;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:disabled {
+  background-color: #a9a9a9;
+  cursor: not-allowed;
 }
+
+.bodys
+{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #dfdede;
+  font-family: Arial, Helvetica, sans-serif;
+  background-blend-mode: darken;
+  margin: 0;
+}
+
